// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders properly 1`] = `
<TransparentPaper>
  <Styled(MuiBox)
    className=""
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="511px"
    p={1}
    width="35px"
  />
</TransparentPaper>
`;

exports[`<Hand /> renders properly with player 1`] = `
<TransparentPaper>
  <Styled(MuiBox)
    className=""
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="11px"
    p={1}
    width="35px"
  >
    <Tile
      boardLocation={null}
      key="A1"
      tile={
        Object {
          "id": "A1",
          "letter": "A",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="B1"
      tile={
        Object {
          "id": "B1",
          "letter": "B",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="C1"
      tile={
        Object {
          "id": "C1",
          "letter": "C",
        }
      }
    />
  </Styled(MuiBox)>
</TransparentPaper>
`;
